Fixed spacing for home subtitle

--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,8 @@ h1 {
     margin: 0;
     text-align: center;
     font-size: 10px;
-    letter-spacing: 43px;
-    margin-right: -43px;
+    letter-spacing: 38px;
+    margin-right: -38px;
 }
 
 #blueTrans {
